welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:10: error: ';' expected but 'else' found.
else return -1
^